[project]
name = "sph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imageio[ffmpeg]>=2.37.0",
    "matplotlib>=3.10.1",
    "mesh-to-sdf>=0.0.15",
    "pyglet<2",
    "pyvista>=0.44.2",
    "scikit-fmm>=2025.1.29",
    "trimesh>=4.6.6",
    "warp-lang>=1.7.0",
]

[tool.basedpyright]
typeCheckingMode = "off"
reportAny = false
reportExplicitAny = false
reportInvalidTypeForm = false
reportUnknownParameterType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnusedCallResult = false
reportConstantRedefinition = false
